python-hildon (0.9.0-1maemo6) unstable; urgency=low

  * hildonmodule.c: replace hardcoded constants with defines from
    hildon-defines.h.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Thu, 14 May 2009 13:49:15 -0400

python-hildon (0.9.0-1maemo5) unstable; urgency=low

  * Add versioned build dependency on libhildonfm2-dev >= 1:2.11+0m5 to use
    version that fixes MB#4450.
  * Update .defs and hildon.override for Maemo 5.0 beta API.
  * Fix refcount bug in set_app_menu and add test (fixes MB#4492).
  * Add support for .defs transformation in hildon_gen_defs.sh.
  * setup.py: add gconf-2.0 and gnome-vfs-2.0 as dependencies, as a workaround
    for MB#4538.
  * Restore hildonglade module.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Tue, 12 May 2009 15:27:28 -0400

python-hildon (0.9.0-1maemo4) unstable; urgency=low

  * Remove libhildondesktop-1 from setup.py.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Mon, 11 May 2009 14:40:16 -0400

python-hildon (0.9.0-1maemo3) unstable; urgency=low

  * Remove unused build dependency on libhildondesktop1-dev.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Fri, 08 May 2009 14:43:35 -0400

python-hildon (0.9.0-1maemo2) unstable; urgency=low

  * Remove libhildonhelp dependency (removed since fremantle 5 beta).
  * Add workaround for missing headers in libhildonfm2-dev (MB#4450).

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Sat, 02 May 2009 20:53:57 -0400

python-hildon (0.9.0-1maemo1) unstable; urgency=low

  * Bump version to 0.9.0.
  * Restore deprecated API (should avoid breaking existing applications).
  * Add unit tests for hand-written code in hildon.override.
  * Create hildon_gen_defs.sh script to automate (re)generation of .defs.
  * Cleanup build system (see TODO for missing things).
  * Fix build/installation dependencies.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Tue, 14 Apr 2009 16:01:56 -0400

python-hildon (0.8.9-2maemo3) unstable; urgency=low
