@@ -81,6 +81,17 @@ _wrap_hildon_calendar_popup_get_date(PyGObject *self)
 }
 
 %%
+override hildon_color_button_get_color noargs
+static PyObject *
+_wrap_hildon_color_button_get_color(PyGObject *self)
+{
+    GdkColor color = {0, 0, 0, 0};
+
+    hildon_color_button_get_color(HILDON_COLOR_BUTTON(self->obj), &color);
+    return pyg_boxed_new(GDK_TYPE_COLOR, &color, TRUE, TRUE);
+}
+
+%%
 override hildon_date_button_get_date noargs
 static PyObject *
 _wrap_hildon_date_button_get_date(PyGObject *self)
